<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bioblitz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Button names -->
    <string name="event">Event</string>
    <string name="reference">Reference</string>
    <string name="record">New Entry</string>
    <string name="data">Data</string>
    <string name="more">More&#8230;</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_new_entry">NewEntryActivity</string>

    <!-- Record activity strings -->
    <string name="commonNameLabel">Common Name</string>
    <string name="scientificNameLabel">Scientific Name</string>
    <string name="dateLabel">Date Recorded</string>
    <string name="recorderLabel">Person Recording</string>
    <string name="speciesImage">Image of species</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_species_entry">SpeciesEntryActivity</string>

    <!-- Species Entry strings -->
    <string name="edit">Edit</string>

    <!-- Species Entry strings -->

    <string name="choiceTitle">Add a photo?</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_reference">ReferenceActivity</string>

</resources>
